kubernetes/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: sumwhere
spec:
  replicas: 1
  serviceName: mysql-server
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mypvc
      volumes:
      - name: mypvc
        persistentVolumeClaim:
          claimName: mysql-data

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: sumwhere
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
