kubernetes/redis-single.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  namespace: sumwhere
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redispvc
      volumes:
        - name: redispvc
          persistentVolumeClaim:
            claimName: redis-pvc
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: sumwhere
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
